--- a/mens.html
+++ b/mens.html
@@ -1,8 +1,11 @@
 <html>
     <head>
         <title>Mens Wear</title>
+        <style></style>
     </head>
     <body>
-        
+        <div id="container">
+
+        </div>
     </body>
 </html>
