--- a/mens.html
+++ b/mens.html
@@ -1,11 +1,46 @@
 <html>
     <head>
         <title>Mens Wear</title>
-        <style></style>
+        <style>
+            #container{
+                width: 90%;
+                height : 600px;
+                border: 1px solid;
+                display: flex;
+                margin: auto;
+                justify-content: space-evenly;
+            }
+
+            #container>div{
+                width: 45%;
+                height : 100%;
+                border: 1px solid red;
+                justify-content: center;
+                font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            }
+
+            img {
+                height: 60%;
+                margin-left: 120px;
+            }
+
+
+        </style>
     </head>
     <body>
         <div id="container">
-
+            <div>
+                <img src="https://m.media-amazon.com/images/I/61A7EkYy9RL._UY741_.jpg">
+                <h2>Pause</h2>
+                <h3>Men Cotton  Long Sleeves Shrug</h3>
+                <h1>₹359 ₹1,499 -76%</h1>
+            </div>
+            <div>
+                <img src="https://m.media-amazon.com/images/I/61A7EkYy9RL._UY741_.jpg">
+                <h2>Pause</h2>
+                <h3>Men Cotton  Long Sleeves Shrug</h3>
+                <h1>₹359 ₹1,499 -76%</h1>
+            </div>
         </div>
     </body>
 </html>
