linked all the file

--- a/navbar.html
+++ b/navbar.html
@@ -47,5 +47,10 @@
                 </div>
             </div>
         </div>
+
+        <a href="team.txt">Masai Devloper</a><br>
+        <a href="login.html">Login</a><br>
+        <a href="singup.html">Singup</a><br>
+        <a href="mens.html">Mens</a>
     </body>
 </html>
