--- a/navbar.html
+++ b/navbar.html
@@ -44,7 +44,7 @@
                     <h3><a href="login.html">Login</a></h3>
                 </div>
                 <div>
-                    <h3><a href="singup.html">Singup</a></h3>
+                    <h3><a href="singup.html">Signup</a></h3>
                 </div>
             </div>
         </div>
